syntax = "proto3";

import "pkg/protocol/core/base/base.proto";

package pbcontent;

option go_package = "github.com/TencentBlueKing/bk-bcs/bcs-services/bcs-bscp/pkg/protocol/core/content;pbcontent";

// Content source resource reference: pkg/dal/table/content.go
message Content {
  uint32 id = 1;
  ContentSpec spec = 2;
  ContentAttachment attachment = 3;
  pbbase.CreatedRevision revision = 4;
}

// ContentSpec source resource reference: pkg/dal/table/content.go
message ContentSpec {
  string signature = 1;
  uint64 byte_size = 2;
  string md5 = 3;
}

// ReleasedContentSpec source resource reference: pkg/dal/table/content.go
message ReleasedContentSpec {
  string signature = 1;
  uint64 byte_size = 2;
  string origin_signature = 3;
  uint64 origin_byte_size = 4;
  string md5 = 5;
}

// ContentAttachment source resource reference: pkg/dal/table/content.go
message ContentAttachment {
  uint32 biz_id = 1;
  uint32 app_id = 2;
  uint32 config_item_id = 3;
}
